Deprecate code that generates certificates which relies on sun.security.x509